--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   },
   "homepage": "https://github.com/gms-ws-sandbox/local-config-test#readme",
   "dependencies": {
-    "lodash": "^4.17.17"
+    "lodash": "4.17.17"
   }
 }
