--- a/whitesource.config
+++ b/whitesource.config
@@ -1,3 +1,6 @@
+failErrorLevel=ALL
+
+
 # https://docs.mend.io/bundle/unified_agent/page/unified_agent_configuration_for_native_integrations.html
 # This config file has been created from the above link and is used in all Mend (FKA WhiteSource) Native Repo Integrations by default
 # This file is meant to be used as a template when switching from AUTO to LOCAL configMode in the .whitesource file
